--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
   "name": "travel-tots",
-  "version": "1.0.0",
+  "version": "0.0.1",
+  "private": true,
+  "description": "",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prettier": "prettier --check \"**/*.{js,ts,tsx}\""
   },
   "dependencies": {
+    "@react-native-material/core": "^1.3.7",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^2.0.3",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.34",
+    "@types/react-test-renderer": "^18.0.0",
+    "prettier": "^2.8.7",
+    "typescript": "^5.0.4"
+  }
 }
