--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "prettier": "prettier --check \"**/*.{js,ts,tsx}\""
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-material/core": "^1.3.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
+    "material-ui-community-icons": "^0.15.0",
     "react": "18.2.0",
     "react-native": "0.71.6"
   },
