--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-material/core": "^1.3.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
     "material-ui-community-icons": "^0.15.0",
+    "pod-install": "^0.1.38",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-paper": "^5.7.0",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
